# WebApi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  netlog.csv  vcpkg-configuration.json  vcpkg.json  webapi.cpp
.github/workflows/: webapi.yml
presantation/: WebApiPresentation.pptx  classDiagram.uxf  classDiagramVertical.uxf  commSeqOnclick.uxf  communicationSequence.uxf
src/: DataWebApi.hpp  HTTPSession.cpp  HTTPSession.hpp  Listener.cpp  Listener.hpp  WebServer.cpp  WebServer.hpp  WebsocketSession.cpp  WebsocketSession.hpp  dummy.ini  index.html  script1.js  webapi.cpp  webapi.css  webseite.js
src/website/: webseite.js
